--- a/EATreeD3/index.html
+++ b/EATreeD3/index.html
@@ -7,6 +7,7 @@ path.link {
   fill: none;
   stroke: #666;
   stroke-width: 1.5px;
+  stroke-opacity:0.5;
 }
 
 circle {
@@ -20,7 +21,10 @@ text {
   font: 10px sans-serif;
   pointer-events: none;
 }
-
+.background {
+  fill: none;
+  pointer-events: all;
+}
 </style>
 <body>
 <script>
@@ -30,27 +34,55 @@ d3.csv("force.csv", function(error, links) {
 
 var nodes = {};
 
+var zoom = d3.behavior.zoom()
+    .scaleExtent([1, 10])
+    .on("zoom", zoomed);
+
+var margin = {top: -5, right: -5, bottom: -5, left: -5},
+    width = 1240 - margin.left - margin.right,
+    height = 3000 - margin.top - margin.bottom;
+
 // Compute the distinct nodes from the links.
 links.forEach(function(link) {
     link.source = nodes[link.source] || 
         (nodes[link.source] = {name: link.source});
     link.target = nodes[link.target] || 
         (nodes[link.target] = {name: link.target});
-    //link.value = +link.value;
+
+    link.gain=+link.gain;
+    link.fitness=+link.fitness;
+    link.generation=+link.generation;
+    
+    if(link.generation==0)
+      link.gain=0;
 });
 
-//console.log(links);
 
-var color = d3.scale.linear()
-    .domain([0, 150])
+links.forEach(function(link) {
+  link.target.fitness=link.fitness;
+  link.target.generation=link.generation;
+});
+
+console.log(nodes);
+
+
+var colorNode = d3.scale.linear()
+    .domain([100, 150])
     .range(["green", "red"]);
 
-var extremums=d3.extent(links,function(d){return +d.value});
+var colorLink = d3.scale.linear()
+    .domain([-100, 100])
+    .range(["blue", "red"]);
 
-color.domain(extremums);
-console.log(extremums);
-var width = 1240,
-    height = 5000;
+var extremumsFitness=d3.extent(links,function(d){return +d.fitness});
+var extremumsGain=d3.extent(links,function(d){return +d.gain});
+
+colorNode.domain(extremumsFitness);
+colorLink.domain(extremumsGain);
+
+console.log(extremumsFitness);
+console.log(extremumsGain);
+
 
 var force = d3.layout.force()
     .nodes(d3.values(nodes))
@@ -62,8 +94,12 @@ var force = d3.layout.force()
     .start();
 
 var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+    .call(zoom)
+  .append("g")
+    //.attr("transform", "translate(" + margin.left + "," + margin.right + ")")
+  .append("g")
 
 // build the arrow.
 svg.append("svg:defs").selectAll("marker")
@@ -88,7 +124,11 @@ var path = svg.append("svg:g").selectAll("path")
   .enter().append("svg:path")
 //    .attr("class", function(d) { return "link " + d.type; })
     .attr("class", "link")
-    .style("stroke",function(d){return color(d.value)})
+    .style("stroke",function(d){return colorLink(d.gain)})
+    .on("mouseover",function(d){d3.select(this).style("stroke-opacity",
+          "1").style("stroke-width","5px");})
+    .on("mouseout",function(d){d3.select(this).style("stroke-opacity",
+          "0.5").style("stroke-width","1.5px");})
     .attr("marker-end", "url(#end)");
 
 // define the nodes
@@ -100,7 +140,8 @@ var node = svg.selectAll(".node")
 
 // add the nodes
 node.append("circle")
-    .attr("r", 3);
+    .attr("r", 7)
+    .style("fill",function(d){return colorNode(d.fitness)});
 
 // add the text 
 node.append("text")
@@ -110,22 +151,33 @@ node.append("text")
 
 // add the curvy lines
 function tick() {
+    node
+        .attr("transform", function(d) {
+          d.fixed=true;
+          d.x=((((d.index)%(30))*40)+10);
+          d.y=(((d.generation)*(100))+100); 
+  	      return "translate(" + d.x + "," +d.y + ")"; });
+
     path.attr("d", function(d) {
         var dx = d.target.x - d.source.x,
             dy = d.target.y - d.source.y,
-            dr = Math.sqrt(dx * dx + dy * dy);
-        return "M" + 
+            //dr = Math.sqrt(dx * dx + dy * dy);
+            dr=0;
+         return "M" + 
             d.source.x + "," + 
             d.source.y + "A" + 
             dr + "," + dr + " 0 0,1 " + 
             d.target.x + "," + 
             d.target.y;
     });
-
-    node
-        .attr("transform", function(d) { 
-  	    return "translate(" + d.x + "," + d.y + ")"; });
+    
+    force.stop();
 }
+
+function zoomed() {
+  svg.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+}
+
 
 });
 
